== CHANGELOG ==
27/02/17:
 - Fixed bug in to_vtk.py script where Dataset was created even if no datafile or listfile were specified, which created an error.
 - read_model didn't flip the X (north-south) coordinates as they should. Changed that, and changed model_to_vtk accordingly.
24/02/17:
 - Changed the components list in data_plot to a table, with each type (e.g. impedance, tipper, phase, etc.) as headers.
 - Added bostick plotting to gplot and data_plot.
22/02/17:
 - Fixed bug where removing a site in data_plot.py would cause an error if only using a list file. Data.site_names was pointing directly to Raw.site_names rather than getting its own copy, and therefore the site would already be removed when RawData.remove_site was called.
22/02/17:
 - Added input 'mode' in RawData.get_locs that takes 'utm', 'latlong', or 'centered' to specify which type of site locations you want.
20/02/17:
 - Fixed bug where adding a period in data_plot would insert the period correctly for all components except one (whichever one was first through the loop in Site.add_periods).
 - to_vtk functions in IO now supports a sea level correction to model and site elevations.
 - Added script 'to_vtk.py' which gives command line dialog for getting .vtk files for models and / or sites.
17/02/17:
 - When hovering plots in GUI, mouse info is given for log10 and normal scale periods AND frequency.
 - Middle mouse button clicks (when data selection is on) now gives data point period, frequency, and percent availability among sites.
 - Fixed bug where changing between datasets caused an error if the sites weren't the same. Seems to be fixed but keep an eye on it.
 - data plot GUI requires at least 1 data period be selected (won't let you remove all periods)
16/02/17: